# openmm-reaxff-plugin

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: 2_7xf7-protein-and-fragments.ipynb  NDG.mol2
examples/.ipynb_checkpoints/: 2_7xf7-protein-and-fragments-checkpoint.ipynb
examples/utils/: EMReporter.py  TopologyTools.py
examples/utils/.ipynb_checkpoints/: ReaxFFHelpers-checkpoint.py
openmmapi/include/: OpenMMReaxFF.h
openmmapi/include/openmm/: ReaxffForce.h
openmmapi/include/openmm/internal/: PuremdInterface.h  ReaxffForceImpl.h  ReaxffHelpers.h  windowsExportReaxff.h
openmmapi/src/: PuremdInterface.cpp
python/: CMakeLists.txt
python/src/: reaxff.i
source/: PuremdInterface.cpp  ReaxffForce.cpp  ReaxffForceImpl.cpp  ReaxffHelpers.cpp
tests/: TestReaxffForce.cpp  control
